<resources>
    <string name="app_name">Easy</string>
    <string name="list">列表</string>
    <string name="photo">照片</string>

    <string name="loading">加载</string>
    <string name="preview">预览</string>
    <string name="finish">完成</string>
    <string name="ok">确定</string>
    <string name="link_name_cannot_empty">链接名称不能为空</string>
    <string name="edit">编辑</string>
    <string name="camera">相机</string>
    <string name="album">相册</string>
    <string name="calendar">日历</string>
    <string name="sync">同步</string>
    <string name="account">账号</string>
    <string name="notebook">日记本</string>
    <string name="password_and_fingerprint">密码 + 指纹</string>
    <string name="password">密码</string>
    <string name="remind">提醒</string>
    <string name="about">关于</string>
    <string name="change_password">修改密码</string>
    <string name="fingerprint_unlock">指纹解锁</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="input_current_password">请输入当前密码</string>
    <string name="input_new_password_again">请再次输入新密码</string>
    <string name="password_unconsistent">两次输入密码不一致，请从重新输入</string>
    <string name="journal_alarm">日记提醒</string>
    <string name="alarm_time">提醒时间</string>
    <string name="register">注册</string>
    <string name="password_confirm">密码确认</string>
    <string name="email">邮箱</string>
    <string name="account_or_email">账号/邮箱</string>
    <string name="login">登录</string>
    <string name="edit_account">编辑账户</string>
    <string name="name">姓名</string>
    <string name="exit">退出</string>
    <string name="summary">简介</string>
    <string name="save">存储</string>
    <string name="sync_config">同步配置</string>
    <string name="sync_service">同步服务</string>
    <string name="disabled">已禁用</string>
    <string name="enabled">已启用</string>

    <string-array name="journal_item_options">
        <item>删除</item>
    </string-array>

    <string-array name="add_photo">
        <item>@string/camera</item>
        <item>@string/album</item>
    </string-array>
</resources>
