<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgGray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/customToolbar"
            app:navigationIcon="@drawable/ic_arrow_back_white"
            app:title="@string/register"
            app:titleTextColor="@color/white" />

        <EditText
            android:id="@+id/et_account"
            style="@style/EditorBarStyle.white"
            android:layout_marginTop="48dp"
            android:drawableLeft="@drawable/sel_account_gray_primary"
            android:ems="16"
            android:hint="@string/account"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_email"
            style="@style/EditorBarStyle.white"
            android:drawableLeft="@drawable/sel_email_gray_primary"
            android:ems="10"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/et_password"
            style="@style/EditorBarStyle.white"
            android:drawableLeft="@drawable/sel_password_gray_primary"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_password_confirm"
            style="@style/EditorBarStyle.white"
            android:drawableLeft="@drawable/sel_password_gray_primary"
            android:ems="10"
            android:hint="@string/password_confirm"
            android:inputType="textPassword" />


        <TextView
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_bar_size"
            android:layout_marginTop="32dp"
            android:background="@color/white"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/text_dark"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>