<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgGray"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/customToolbar"
        app:navigationIcon="@drawable/ic_arrow_back_white"
        app:theme="@style/ToolbarPopupTheme"
        app:title="@string/edit_account"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_bar_size"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/textBlack" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            tools:text="Eirture" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_bar_size"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:textColor="@color/textBlack" />

        <EditText
            android:id="@+id/et_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            tools:text="I'm, What I am" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_bar_size"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/exit"
        android:textColor="@color/textBlack" />
</LinearLayout>