<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgGray"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:navigationIcon="@drawable/ic_arrow_back_white"
        app:title="@string/password"
        app:titleTextColor="@color/white" />

    <LinearLayout
        style="@style/ListItem"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password"
            android:textColor="@color/textBlack"
            android:textSize="16dp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <include layout="@layout/l_gray_line" />

    <TextView
        android:id="@+id/item_change_password"
        style="@style/ListItem.TextView"
        android:background="@drawable/sel_item_click"
        android:text="@string/change_password" />


    <LinearLayout
        style="@style/ListItem"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fingerprint_unlock"
            android:textColor="@color/textBlack"
            android:textSize="16dp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_fingerprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>